--- a/index.htm
+++ b/index.htm
@@ -64,8 +64,9 @@ class="spotlight" width="450" height="300"style="margin-right: 25px;" >
 </table>
 <br />
 
-<a href="memorygfinal.htm">
-MEMORY GAME </a>
+<a href="https://gitthub.com/amruthasampath.git">
+PLEASE CLICK THE LINK TO KNOW MORE ABOUT AMRUTHA SAMPATH<br />  amruthasampath.github.io </a>
+<a href="
 </p>
 </body>
 </html>
