--- a/index.htm
+++ b/index.htm
@@ -64,7 +64,7 @@ class="spotlight" width="450" height="300"style="margin-right: 25px;" >
 </table>
 <br />
 
-<a href="memorygfinal.html">
+<a href="memorygfinal.htm">
 MEMORY GAME</a>
 
 </p>
